--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/doantheanh172tb/vTigerCRM-asterisk-connector#readme",
   "dependencies": {
+    "asterisk.io": "^0.1.1",
     "ejs": "^2.5.6",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "socket.io": "^2.0.3"
   }
 }
