--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "asterisk.io": "^0.1.1",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "node-vtiger": "^0.3.4",
     "socket.io": "^2.0.3"
   }
 }
